--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <div class="left-side">
+        <div class="logo">
+            <img src="img/odin-lined.png" alt="The Odin Project logo">
+            <p>ODIN</p>
+        </div>
+    </div>
+    <div class="right-side">
+        <div class="first-third">
+            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
+            <p>You <em>know</em> you want to.</p>
+        </div>
+    </div>
 </body>
 </html>
