Add boilerplate text and change styling

--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
 <body>
     <div class="left-side">
         <div class="logo">
-            <img src="img/odin-lined.png" alt="The Odin Project logo">
-            <p>ODIN</p>
+            <div class="logo-img">
+                <img src="img/odin-lined.png" alt="The Odin Project logo">
+            </div>
+            <div class="logo-text">
+                <p>ODIN</p>
+            </div>
         </div>
     </div>
     <div class="right-side">
-        <div class="first-third">
+        <div class="first-part">
             <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
             <p>You <em>know</em> you want to.</p>
+        </div>
+        <div class="second-part">
+            <h1>Let's do this!</h1>
+        </div>
+        <div class="third-part">
+            <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
 </body>
