Style the first container of the right side

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="right-side">
         <div class="first-part">
-            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
+            <p>This is not a real online service! You know you need something <br>like this in your life to help you realize your deepest dreams. <br>Sign up <em>now</em> to get started</p>
             <p>You <em>know</em> you want to.</p>
         </div>
         <div class="second-part">
