Change container names of the right side

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </div>
     </div>
     <div class="right-side">
-        <div class="first-part">
+        <div class="first-container">
             <p>This is not a real online service! You know you need something <br>like this in your life to help you realize your deepest dreams. <br>Sign up <em>now</em> to get started</p>
             <p>You <em>know</em> you want to.</p>
         </div>
-        <div class="second-part">
+        <div class="second-container">
             <h1>Let's do this!</h1>
         </div>
-        <div class="third-part">
+        <div class="third-container">
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
