--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
         </div>
         <div class="second-container">
             <h1>Let's do this!</h1>
+
+            <form action="" method="post">
+                <div>
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text">
+
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="email">EMAIL</label>
+                    <input type="email">
+
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="password">PASSWORD</label>
+                    <input type="password">
+
+                    <label for="repeat-password">REPEAT PASSWORD</label>
+                    <input type="password">
+                </div>
+
+                <button type="submit">Create Account</button>
+            </form>
         </div>
         <div class="third-container">
             <p>Already have an account? <a href="">Log in</a></p>
