Fix structure and add attributes

--- a/index.html
+++ b/index.html
@@ -28,26 +28,35 @@
             <h1>Let's do this!</h1>
 
             <form action="" method="post">
-                <div>
-                    <label for="first-name">FIRST NAME</label>
-                    <input type="text">
-
-                    <label for="last-name">LAST NAME</label>
-                    <input type="text">
+                <div class="fieldset-container">
+                    <div class="fieldset">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="firstName" required autocomplete="off">
+                    </div>
+                    <div class="fieldset">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="lastName" required autocomplete="off">
+                    </div>
                 </div>
-                <div>
-                    <label for="email">EMAIL</label>
-                    <input type="email">
-
-                    <label for="phone-number">PHONE NUMBER</label>
-                    <input type="text">
+                <div class="fieldset-container">
+                    <div class="fieldset">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" required autocomplete="off">
+                    </div>
+                    <div class="fieldset">
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="number" id="phone-number" name="phoneNumber" required autocomplete="off">
+                    </div>
                 </div>
-                <div>
-                    <label for="password">PASSWORD</label>
-                    <input type="password">
-
-                    <label for="repeat-password">REPEAT PASSWORD</label>
-                    <input type="password">
+                <div class="fieldset-container">
+                    <div class="fieldset">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" name="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" required autocomplete="off">
+                    </div>
+                    <div class="fieldset">
+                        <label for="repeat-password">REPEAT PASSWORD</label>
+                        <input type="password" id="repeat-password" name="repeatPassword" required autocomplete="off">
+                    </div>
                 </div>
 
                 <button type="submit">Create Account</button>
