--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="fieldset-container">
                     <div class="fieldset">
                         <label for="password">PASSWORD</label>
-                        <input type="password" id="password" name="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" required autocomplete="off">
+                        <input type="password" id="password" name="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" minlength="5" required autocomplete="off">
                     </div>
                     <div class="fieldset">
                         <label for="repeat-password">REPEAT PASSWORD</label>
