--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <p>ODIN</p>
             </div>
         </div>
+        <div class="credits">
+            <p>Image by <a href="https://unsplash.com/@nayamamarshe?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nayam</a> on <a href="https://unsplash.com/es/fotos/gP03rRKJBps?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+        </div>
     </div>
     <div class="right-side">
         <div class="first-container">
